--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "aminhatim6@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "vlucas/phpdotenv": "^5.5"
+    }
 }
